--- a/meta/main.yml
+++ b/meta/main.yml
@@ -36,7 +36,7 @@ galaxy_info:
   # https://galaxy.ansible.com/api/v1/platforms/
   #
 
-  # platforms:
+  platforms:
   - name: EL
     versions:
   #  - all
